Fix build errors after dependency update